--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,3 +19,16 @@
 -Improve ExportImageList class
 -Implement base loading
 -Meet the requirements of backend and user interface
+
+//=================================================================================================
+//Ver_0.3
+
+-ExportImageList implemented
+
+//TO DO:
+-Implement base loading
+-Meet 100% of the requirements of backend and user interface
+-add images tables
+-show Image while adding
+-edit Image properties
+-unit tests required
